Use absolute brightness value in conservative check when loading profile

There's a check that ensures the brightness isn't ramped up when we switch
to a more conservative profile and then current brightness is lower.
However, it compared the raw hardware value with the config percentage value.

BUG: 355687
FIXED-IN: 5.5.0
REVIEW: 126138